RuleAnnotationParser: prefer Stream.toList()
over Stream.collect(Collectors.toList())